--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,6 @@
 
 # Project-local glide cache, RE: https://github.com/Masterminds/glide/issues/736
 .glide/
+
+# default config file name
+config.json
