config given a whitelist and queue sizes added a default config that most users wont want to edit defining most of the system 'constants' that might need tweaking per install improved the type emitted by file.go merge paths for a given network based on filesize, largest file for channel wins test code in main application

--- a/default_config.json
+++ b/default_config.json
@@ -1,1 +1,12 @@
-{"queues": {"file": 100}, "network": "mynetwork", "sphinx": {"host":"127.0.0.1", "port": 9999, "user": "irc"}}
+{
+	"whitelist": [],
+	"queues": {
+		"file": 200
+	},
+	"network": "mynetwork",
+	"sphinx": {
+		"host":"127.0.0.1",
+		"port": 9999,
+		"user": "irc"
+	}
+}
