--- a/default_config.json
+++ b/default_config.json
@@ -1,9 +1,18 @@
 {
 	"whitelist": [],
 	"queues": {
-		"file": 200
+		"file": 200,
+		"line": 10000,
+		"id": 10000
 	},
 	"network": "mynetwork",
+	"arango": {
+		"endpoints": [
+			"http://127.0.0.1:8529"
+		],
+		"user": "<OVERRIDE ME>",
+		"password": "<OVERRIDE ME>"
+	},
 	"sphinx": {
 		"host":"127.0.0.1",
 		"port": 9999,
